--- a/css/login.css
+++ b/css/login.css
@@ -18,7 +18,7 @@
 }
 
 .side-image {
-    background-image: url("../img/teste.jpg");
+    background-image: url("../img/loginpage.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
