--- a/css/style.css
+++ b/css/style.css
@@ -228,8 +228,25 @@ header {
   border: none;
 }
 
-
 h2 {
   text-align: center; 
   margin-bottom: 20px; 
+}
+
+.definicaoPhishing{
+  h2, h5{
+    text-align: left;
+    max-width: 50%;
+
+  }
+  p {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    max-width: 70%;
+  }
+}
+#imgAnzol{
+  width: 00px;
+  height: auto;
 }
