--- a/css/login.css
+++ b/css/login.css
@@ -3,11 +3,13 @@
 
 * {
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 .wrapper {
     background: rgb(24, 24, 26);
     padding: 0 20px 0 20px;
+    margin-top: 50px;
 }
 
 .principal {
