--- a/css/menu.css
+++ b/css/menu.css
@@ -1,82 +1,83 @@
-header {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 1;
-    width: 100vw;
-    height: 100px;
-    background-color: black;
+.header {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+    position: fixed !important;
+    left: 0 !important;
+    top: 0 !important;
+    z-index: 1 !important;
+    width: 100vw !important;
+    height: 100px !important;
+    background-color: black !important;
 
 }
 
 .logo, .nav-link {
-    color: white;
+    color: white !important;
 }
 
 .logo {
-    margin-left: 10px;
+    margin-left: 10px !important ;
 }
 
 .nav-list {
-    display: flex;
+    display: flex !important ;
 }
 
 .nav-link {
-    text-decoration: none;
-    font-size: 18px;
+    text-decoration: none !important;
+    font-size: 18px !important;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    background-color: black;
+    display: flex !important;
+    justify-content: space-between !important;
+    background-color: black !important;
+    margin-top: 15px !important;
 }
 
 .nav-item {
-    margin-right: 10px;
-    padding: 10px;
+    margin-right: 10px !important;
+    padding: 10px !important;
 }
 
-.btn {
-    display: none;
+.nav-btn {
+    display: none !important;
 }
 
-.btn button {
-    background-color: transparent;
-    border: none;
+.nav-btn button {
+    background-color: transparent !important;
+    border: none !important;
 }
 
 @media screen and (max-width : 1080px) {
     body {
-        background-color: black;
+        background-color: black !important;
     }
 
     .nav-list {
-        display: block;
-        margin-left: 0;
+        display: block !important;
+        margin-left: 0 !important;
     }
 
     .esconder {
-        display: none;
+        display: none !important;
     }
 
     .nav-bar {
-        display: block;
+        display: block !important;
     }
 
     .nav-item {
-        margin-right: 0;
+        margin-right: 0 !important;
 
     }
 
     .logo_button {
-        display: flex;
-        justify-content: space-between;
+        display: flex !important;
+        justify-content: space-between !important;
     }
 
-    .btn {
-        margin-top: 15px;
-        display: block;
+    .nav-btn {
+        margin-top: 15px !important;
+        display: block !important;
     }
 }
