--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 * {
   text-align: justify;
   box-sizing: border-box;
+  /* background-color: #fff !important;
+  color: black !important; */
 }
 
 html {
@@ -12,20 +14,20 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 18px; 
+  font-size: 18px;
   background: linear-gradient(black, #040819);
   color: #d1d6e4;
   line-height: 1.7;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1:not(.lg), h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 1.2;
   color: #ffffff;
 }
 
-h1 {
-  font-size: 2rem; 
+h1:not(.lg) {
+  font-size: 2rem;
   margin-top: 40px;
   margin-bottom: 30px;
   text-align: left;
@@ -35,7 +37,8 @@ h1 {
   font-size: 4rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-#principal{
+
+#principal {
   font-size: 20px;
 }
 
@@ -139,7 +142,7 @@ h1 {
 
 .video-container {
   text-align: center;
-  background-color: #04101a; 
+  background-color: #04101a;
   padding: 50px;
   color: #fff;
 }
@@ -152,16 +155,17 @@ h1 {
 }
 
 h2 {
-  text-align: center; 
-  margin-bottom: 20px; 
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.definicaoPhishing{
-  h2, h5{
+.definicaoPhishing {
+  h2, h5 {
     text-align: left;
     max-width: 50%;
 
   }
+
   p {
     display: flex;
     justify-content: space-between;
@@ -169,7 +173,16 @@ h2 {
     max-width: 70%;
   }
 }
-#imgAnzol{
-  width: 00px;
-  height: auto;
+
+#imgAnzol {
+  width: 400px;
+  /* height: auto; */
+}
+
+.btn {
+  margin-top: 10px;
+}
+
+.pimg{
+  display: flex;
 }
