--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,38 @@ h2 {
   width: 00px;
   height: auto;
 }
+
+.card{
+  border: 2px solid #00ffff;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 80px;
+  max-width: 500px;
+  overflow: hidden;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+  background-color: transparent;
+  align-items: center;
+}
+.more-text {
+  display: none;
+}
+.card .expanded .more-text {
+  display: inline;
+}
+
+.card:hover{
+  box-shadow: 0 8px 16px rgba(0, 253, 249, 0.2);
+  transform: translateY(-5px);
+}
+.toggleButton {
+  display: block;
+  margin: 0 auto; 
+  padding: 10px 20px;
+  cursor: pointer;
+  border: none;
+  background-color: #eeeeee; 
+  color: black; 
+  font-size: 16px;
+  border-radius: 20px; 
+  transition: background-color 0.3s ease;
+}
