--- a/css/style.css
+++ b/css/style.css
@@ -173,42 +173,58 @@ h2 {
     max-width: 70%;
   }
 }
-#imgAnzol{
+
+#imgAnzol {
   width: 00px;
   height: auto;
 }
 
-.card{
+.card {
   border: 2px solid #00ffff;
   border-radius: 10px;
   padding: 15px;
-  margin: 80px;
+  margin: 25px 0;
   max-width: 500px;
   overflow: hidden;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
   background-color: transparent;
   align-items: center;
 }
+
+
+
+
 .more-text {
   display: none;
 }
+
 .card .expanded .more-text {
   display: inline;
 }
 
-.card:hover{
+.card:hover {
   box-shadow: 0 8px 16px rgba(0, 253, 249, 0.2);
   transform: translateY(-5px);
 }
+
 .toggleButton {
   display: block;
-  margin: 0 auto; 
+  margin: 0 auto;
   padding: 10px 20px;
   cursor: pointer;
   border: none;
-  background-color: #eeeeee; 
-  color: black; 
+  background-color: #eeeeee;
+  color: black;
   font-size: 16px;
-  border-radius: 20px; 
+  border-radius: 20px;
   transition: background-color 0.3s ease;
+}
+
+.centralizar_card {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
 }
