--- a/css/menu.css
+++ b/css/menu.css
@@ -5,8 +5,8 @@
     top: 0 !important;
     z-index: 1 !important;
     width: 100vw !important;
-    height: 100px !important;
-    background-color: black !important;
+    /* height: 10px !important; */
+    /* background-color: rgb(231, 0, 0); */
 
 }
 
@@ -30,8 +30,9 @@
 .nav-bar {
     display: flex !important;
     justify-content: space-between !important;
-    background-color: black !important;
-    margin-top: 15px !important;
+    background-color: rgb(0, 0, 0) !important;
+    /* margin-top: 15px !important; */
+    height: 55px;
 }
 
 .nav-item {
