--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,70 +1,68 @@
-/* Reset básico */
-* {
-    margin: 0;
+*{
     padding: 0;
+    margin: 0;
+    font-family: sans-serif;
     box-sizing: border-box;
+    background-color: black;
 }
 
-/* Estilos Gerais */
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: #333;
-    background-color: #000000;
-}
-
-h1 {
-    font-size: 2.5rem;
-    margin-bottom: 0.5rem;
-}
-
-h2 {
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
-}
-
-.about-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
-    max-width: 1200px;
-    margin: auto;
-    border-radius: 10px;
-}
-
-.about-content {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-    align-items: center;
-    padding: 1rem;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius:20px ;
-}
-
-.about-text {
-    max-width: 600px;
-}
-
-.about-image img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-}
-
-/* Estilos para o Rodapé */
-.footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #000000;
-    color: #fff;
-    position: relative;
-    bottom: 0;
+.about{
     width: 100%;
+    padding: 78px 0px;
+    background-color: black;
 }
 
-.footer p {
-    font-size: 0.9rem;
+.about img{
+    height: auto;
+    width: 320px;
+}
+.about-text{
+    width: 950px;
+}
+.main{
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.about-text h1{
+    color: white;
+    font-size: 80px;
+    margin-bottom: 20px;
+}
+.about-text h5{
+    color: white;
+    font-size: 25px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+    letter-spacing: 2px;
+}
+.about-text p{
+    color: white;
+    letter-spacing: 3px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+button{
+    background-color: rgb(49, 183, 183);
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 90px;
+    transition: .4s; 
+}
+button:hover{
+    background: transparent;
+    border: 2px solid;
+    cursor: pointer;
+}
+
+footer{
+    background-color: black;
+    color: white;
 }
