--- a/css/sobre.css
+++ b/css/sobre.css
@@ -17,12 +17,12 @@
     width: 320px;
 }
 
-.about-text {
+/* .about-text {
     width: 950px;
-}
+} */
 
 .main {
-    width: 1130px;
+    width: 100%;
     max-width: 95%;
     margin: 0 auto;
     display: flex;
@@ -50,4 +50,16 @@
     line-height: 28px;
     font-size: 18px;
     margin-bottom: 45px;
+}
+
+@media (max-width: 768px) {
+    .main {
+        display: block;
+    }
+}
+
+@media (max-width: 480px) {
+    .main {
+        display: block;
+    }
 }
