--- a/css/sobre.css
+++ b/css/sobre.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
+    text-align: justify;
     /* background-color: black; */
 }
 
