--- a/css/mensagem.css
+++ b/css/mensagem.css
@@ -16,7 +16,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
-    max-width: 300px;
+    /* max-width: 300px; */
 }
 
 .confirm-box p {
