--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@
 }
 
 .side-image {
-    background-image: url("../img/WhatsApp\ Image\ 2024-11-21\ at\ 12.21.16.jpeg");
+    background-image: url("../img/logo.jpeg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
